Network and memory measurement code

--- a/sysMeasureTool/Makefile
+++ b/sysMeasureTool/Makefile
@@ -4,14 +4,18 @@ NAME	=	sysMeasureTool
 
 CC	=	gcc -m64
 
-SRC	=	sysMeasureTool.c
+SRC	=	sysMeasureTool.c	\
+		memory.c		\
+		network.c
 
 OBJ     =       $(SRC:.c=.o)
 
-CFLAGS	=	-O0 -Wall
+CFLAGS	=	-O -Wall -Winline -fno-omit-frame-pointer -funroll-loops
+
+LDFLAGS =	-lsocket -lnsl
 
 $(NAME)	:	$(OBJ)
-		$(CC) $(OBJ) -o $(NAME)
+		$(CC) $(LDFLAGS) $(OBJ) -o $(NAME)
 
 all	:	$(NAME)
 
