--- a/sysMeasureTool/Makefile
+++ b/sysMeasureTool/Makefile
@@ -4,6 +4,8 @@ NAME	=	sysMeasureTool
 
 CC	=	gcc -m64
 
+UNAME	:=	$(shell uname)
+
 SRC	=	sysMeasureTool.c	\
 		memory.c		\
 		network.c		\
@@ -13,7 +15,11 @@ OBJ     =       $(SRC:.c=.o)
 
 CFLAGS	=	-O -Wall -Winline -fno-omit-frame-pointer -funroll-loops
 
+ifeq ($(UNAME), Solaris)
 LDFLAGS =	-lsocket -lnsl
+else
+LDFLAGS	=
+endif
 
 $(NAME)	:	$(OBJ)
 		$(CC) $(LDFLAGS) $(OBJ) -o $(NAME)
